--- a/src/data/grammar/mtg-cards.yaml
+++ b/src/data/grammar/mtg-cards.yaml
@@ -471,6 +471,7 @@
     "Sneaky Homunculus",
     "Steamflogger Boss",
     "Storm Cauldron",
+    "Stranglehold",
     "Sway of the Stars",
     "Tectonic Edge",
     "The Chain Veil",
