--- a/src/data/grammar/nouns.yaml
+++ b/src/data/grammar/nouns.yaml
@@ -42,13 +42,13 @@
       "lack of self-control", "publicity", "vengeance", "violence", "advice", "applause", "innocence", "corruption", "dignity", "education",
       "fame",  "freedom", "poor health", "hospitality", "hunger", "karate", "logic", "luck", "nonsense", "recreation", "pleasure", "pain",
       "leisure", "revenge", "time", "traffic", "damage", "imbalance", "wrath", "illusion", "madness", "gravity", "brinksmanship", "vacation",
-      "anxiety", "destiny", "danger"
+      "anxiety", "destiny", "danger", "chivalry"
   ],
   "emotion": [
       "anticipation", "discomfort",  "disgust", "envy", "confusion", "giddiness", "fear", "consternation", "squeamishness", "hatred",
       "panic", "glee", "rage", "insecurity", "self-consciousness", "abject terror", "cautious optimism", "boredom", "cowardice", "sorrow",
       "lust", "near-fanatical devotion", "arrogance", "pluckiness", "indifference", "unwillingness", "begrudging admiration", "fury",
-      "loneliness", "angst", "mistrust", "shame", "loyalty", "chivalry", "memory", "duty", "regret"
+      "loneliness", "angst", "mistrust", "shame", "loyalty","memory", "duty", "regret"
   ],
   "itemNoun": [
       "weapon", "card", "wand", "spellbook", "staff", "orb", "tree", "plant", "crown", "jewel", "amulet", "egg", "banner", "boot",
